feat(RequestAPI) : Add "request" method GET all with filters
