# back/src/main/java/com/ynov/capuches/opale/controllers/RequestController.java
@@ -5,14 +5,12 @@ import com.ynov.capuches.opale.model.RequestDTO;
 import com.ynov.capuches.opale.openapi.api.RequestApiDelegate;
 import com.ynov.capuches.opale.services.RequestService;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
 
+import java.time.LocalDate;
+import java.util.Date;
 import java.util.List;
 
 @Slf4j
@@ -52,10 +50,16 @@ public class RequestController implements RequestApiDelegate {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
         }
     }
-    
+
     @Override
-    public ResponseEntity<List<RequestDTO>> getRequests() {
-        return new ResponseEntity<>(requestService.getAllRequests(), HttpStatus.OK);
+    public ResponseEntity<List<RequestDTO>> getRequests(
+            String status,
+            String backer,
+            LocalDate dueDate,
+            Float bounty
+    ) {
+        List<RequestDTO> requests = requestService.getAllRequests(status, backer, dueDate, bounty);
+        return ResponseEntity.status(HttpStatus.OK).body(requests);
     }
 
 }
