# swagger-capuches-opale.yml
@@ -99,6 +99,32 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '500':
           $ref: '#/components/responses/InternalServerError'
+      parameters:
+        - in: query
+          name: statusFilter
+          schema:
+            type: string
+            properties:
+                status:
+                    type: string
+                    enum: [PENDING, REFUSED, ABANDONED, VALIDATED, FAILURE, SUCCESS]
+        - in: query
+          name: backerFilter
+          schema:
+            type: string
+            properties:
+              backer:
+                type: string
+        - in: query
+          name: dueDateFilter
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: bountyFilter
+          schema:
+            type: number
+            format: float
     post:
       tags:
         - Request
